Make sure error summary text visible

--- a/stylesheets/_component.error-summary.scss
+++ b/stylesheets/_component.error-summary.scss
@@ -1,7 +1,7 @@
 .error-summary {
     background-color: color(white);
     border: 5px solid color(danger);
-    color: color(text);
+    color: #000;
     font-family: $font-family-regular;
     margin-bottom: $margin-base * 2;
     padding: $padding-base * 1.5;
